Use Duration for shardInitializationTimeout
This is an easy conversion, as most places can switch to
CompletionStages. Our previously-introduced ActorUtils.ask() method is
quite helpful here.

JIRA: CONTROLLER-2180
Change-Id: I2467f6b0279afca566b34347ebbfb4ccf8b3c768
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>