@@ -12,7 +12,6 @@ import static org.junit.Assert.assertEquals;
 import java.time.Duration;
 import java.util.Arrays;
 import java.util.List;
-import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import org.apache.pekko.actor.ActorRef;
 import org.apache.pekko.actor.Status.Failure;
@@ -28,7 +27,6 @@ import org.opendaylight.controller.cluster.raft.client.messages.GetSnapshotReply
 import org.opendaylight.controller.cluster.raft.persisted.ByteState;
 import org.opendaylight.controller.cluster.raft.persisted.Snapshot;
 import org.opendaylight.raft.api.TermInfo;
-import scala.concurrent.duration.FiniteDuration;
 
 /**
  * Unit tests for ShardManagerGetSnapshotReplyActor.
@@ -45,8 +43,8 @@ public class ShardManagerGetSnapshotReplyActorTest extends AbstractActorTest {
         List<String> shardList = Arrays.asList("shard1", "shard2", "shard3");
         ShardManagerSnapshot shardManagerSnapshot = new ShardManagerSnapshot(shardList);
         ActorRef replyActor = getSystem().actorOf(ShardManagerGetSnapshotReplyActor.props(
-                shardList, "config", shardManagerSnapshot, kit.getRef(),
-                "shard-manager", FiniteDuration.create(100, TimeUnit.SECONDS)), "testSuccess");
+                shardList, "config", shardManagerSnapshot, kit.getRef(), "shard-manager", Duration.ofSeconds(100)),
+                "testSuccess");
 
         kit.watch(replyActor);
 
@@ -92,8 +90,8 @@ public class ShardManagerGetSnapshotReplyActorTest extends AbstractActorTest {
         TestKit kit = new TestKit(getSystem());
 
         ActorRef replyActor = getSystem().actorOf(ShardManagerGetSnapshotReplyActor.props(
-                Arrays.asList("shard1", "shard2"), "config", null, kit.getRef(), "shard-manager",
-                FiniteDuration.create(100, TimeUnit.SECONDS)), "testGetSnapshotFailureReply");
+            List.of("shard1", "shard2"), "config", null, kit.getRef(), "shard-manager", Duration.ofSeconds(100)),
+            "testGetSnapshotFailureReply");
 
         kit.watch(replyActor);
 
@@ -112,8 +110,8 @@ public class ShardManagerGetSnapshotReplyActorTest extends AbstractActorTest {
         TestKit kit = new TestKit(getSystem());
 
         ActorRef replyActor = getSystem().actorOf(ShardManagerGetSnapshotReplyActor.props(
-                Arrays.asList("shard1"), "config", null, kit.getRef(), "shard-manager",
-                FiniteDuration.create(100, TimeUnit.MILLISECONDS)), "testGetSnapshotTimeout");
+            List.of("shard1"), "config", null, kit.getRef(), "shard-manager", Duration.ofMillis(100)),
+            "testGetSnapshotTimeout");
 
         kit.watch(replyActor);
 
